--- a/src/index.scss
+++ b/src/index.scss
@@ -1,33 +1,32 @@
 /* 
 ====== 
 Variables 
-======
+====== 
 */
-:root {
-  --primaryLightColor: rgb(220, 220, 220);
-  --primaryColor: rgb(68, 127, 147);
-  --primaryDarkColor: #c02c03;
-  --mainWhite: #fff;
-  --offWhite: #f7f7f7;
-  --mainBackground: #f1f5f8;
-  --mainOverlay: rgba(35, 10, 36, 0.4);
-  --mainBlack: #222;
-  --mainGrey: #ececec;
-  --darkGrey: #afafaf;
-  --mainRed: #bd0303;
-  --mainTransition: all 0.3s linear;
-  --mainSpacing: 0.3rem;
-  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
-  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
-  --mainBorderRadius: 0.25rem;
-  --smallWidth: 85vw;
-  --maxWidth: 40rem;
-  --fullWidth: 1170px;
-}
+$primaryLightColor: rgb(220, 220, 220);
+$primaryColor: rgb(68, 127, 147);
+$primaryDarkColor: #c02c03;
+$mainWhite: #fff;
+$offWhite: #f7f7f7;
+$mainBackground: #f1f5f8;
+$mainOverlay: rgba(35, 10, 36, 0.4);
+$mainBlack: #222;
+$mainGrey: #ececec;
+$darkGrey: #afafaf;
+$mainRed: #bd0303;
+$mainTransition: all 0.3s linear;
+$mainSpacing: 0.3rem;
+$lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
+$darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+$mainBorderRadius: 0.25rem;
+$smallWidth: 85vw;
+$maxWidth: 40rem;
+$fullWidth: 1170px;
+
 /* 
 ====== 
 Global Styles 
-======
+====== 
 */
 * {
   margin: 0;
@@ -38,12 +37,13 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: var(--mainBlack);
-  background: var(--mainBackground);
+  color: $mainBlack;
+  background: $mainBackground;
   line-height: 1.4;
   font-size: 1rem;
   font-weight: 300;
 }
+
 h1,
 h2,
 h3,
@@ -52,18 +52,22 @@ h5,
 h6 {
   font-family: var(--slantedFont);
   margin-bottom: 1.25rem;
-  letter-spacing: var(--mainSpacing);
+  letter-spacing: $mainSpacing;
 }
+
 p {
   margin-bottom: 1.25rem;
 }
+
 ul {
   list-style-type: none;
 }
+
 a {
   text-decoration: none;
-  color: var(--mainBlack);
+  color: $mainBlack;
 }
+
 img {
   width: 100%;
   display: block;
@@ -72,85 +76,96 @@ img {
 /* 
 ====== 
 Buttons 
-======
+====== 
 */
 .btn,
 .btn-white,
 .btn-primary {
   text-transform: uppercase;
-  letter-spacing: var(--mainSpacing);
-  color: var(--primaryColor);
-  border: 2px solid var(--primaryColor);
+  letter-spacing: $mainSpacing;
+  color: $primaryColor;
+  border: 2px solid $primaryColor;
   padding: 0.45rem 0.8rem;
   display: inline-block;
-  transition: var(--mainTransition);
+  transition: $mainTransition;
   cursor: pointer;
   font-size: 0.8rem;
   background: transparent;
-  border-radius: var(--mainBorderRadius);
-  display: inline-block;
+  border-radius: $mainBorderRadius;
 }
+
 .btn:hover {
-  background: var(--primaryColor);
-  color: var(--mainWhite);
+  background: $primaryColor;
+  color: $mainWhite;
 }
+
 .btn-white {
   background: transparent;
-  color: var(--mainWhite);
-  border-color: var(--mainWhite);
+  color: $mainWhite;
+  border-color: $mainWhite;
 }
+
 .btn-white:hover {
-  background: var(--mainWhite);
-  color: var(--primaryColor);
+  background: $mainWhite;
+  color: $primaryColor;
 }
+
 .btn-primary {
-  background: var(--primaryColor);
-  color: var(--mainWhite);
+  background: $primaryColor;
+  color: $mainWhite;
   border-color: transparent;
 }
+
 .btn-primary:hover {
-  background: var(--primaryLightColor);
-  color: var(--primaryColor);
+  background: $primaryLightColor;
+  color: $primaryColor;
 }
+
 .btn-block {
   width: 100%;
   display: block;
   margin: 0 auto;
-  box-shadow: var(--lightShadow);
+  box-shadow: $lightShadow;
   text-align: center;
 }
+
 .btn-details {
   padding: 0.25rem 0.4rem;
 }
+
 .btn-details:hover {
-  background: var(--primaryLightColor);
-  border-color: var(--primaryLightColor);
+  background: $primaryLightColor;
+  border-color: $primaryLightColor;
 }
+
 /* 
 ====== 
 Navbar
-======
+====== 
 */
 .navbar {
-  background: var(--mainWhite);
+  background: $mainWhite;
   height: 5rem;
   display: flex;
   align-items: center;
-  border-bottom: 2px solid var(--primaryColor);
-  box-shadow: var(--lightShadow);
+  border-bottom: 2px solid $primaryColor;
+  box-shadow: $lightShadow;
 }
+
 .nav-center {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: var(--smallWidth);
+  width: $smallWidth;
   margin: 0 auto;
-  max-width: var(--fullWidth);
+  max-width: $fullWidth;
 }
+
 .nav-links {
   display: flex;
   align-items: center;
 }
+
 .nav-links a {
   text-transform: capitalize;
   display: inline-block;
@@ -160,49 +175,56 @@ Navbar
   letter-spacing: 2px;
   font-size: 1.2rem;
   padding: 0.25rem 0.5rem;
-  transition: var(--mainTransition);
+  transition: $mainTransition;
 }
+
 .nav-links a:hover {
-  color: var(--primaryColor);
+  color: $primaryColor;
 }
+
 .logo {
   font-weight: bold;
   font-size: 2rem;
-  color: var(--primaryColor);
+  color: $primaryColor;
   margin-top: 0.7rem;
 }
+
 /* 
 ====== 
 About
-======
+====== 
 */
 .about-section {
-  width: var(--smallWidth);
-  max-width: var(--maxWidth);
+  width: $smallWidth;
+  max-width: $maxWidth;
   margin: 0 auto;
 }
+
 .about-section p {
   line-height: 2rem;
   font-weight: 400;
   letter-spacing: 2px;
 }
+
 /* 
 ====== 
 Error
-======
+====== 
 */
 .error-page {
   display: flex;
   justify-content: center;
 }
+
 .error-container {
   text-align: center;
   text-transform: capitalize;
 }
+
 /* 
 ====== 
 Cocktails List 
-======
+====== 
 */
 
 .section {
@@ -219,7 +241,7 @@ Cocktails List
 .section-title {
   font-size: 2rem;
   text-transform: capitalize;
-  letter-spacing: var(--mainSpacing);
+  letter-spacing: $mainSpacing;
   text-align: center;
   margin-bottom: 3.5rem;
   margin-top: 1rem;
@@ -230,49 +252,57 @@ Cocktails List
     grid-template-columns: repeat(auto-fill, minmax(338.8px, 1fr));
   }
 }
+
 /* 
 ====== 
 Cocktail 
-======
+====== 
 */
 
 .cocktail {
-  background: var(--mainWhite);
+  background: $mainWhite;
   margin-bottom: 2rem;
-  box-shadow: var(--lightShadow);
-  transition: var(--mainTransition);
+  box-shadow: $lightShadow;
+  transition: $mainTransition;
   display: grid;
   grid-template-rows: auto 1fr;
-  border-radius: var(--mainBorderRadius);
+  border-radius: $mainBorderRadius;
 }
+
 .cocktail:hover {
-  box-shadow: var(--darkShadow);
+  box-shadow: $darkShadow;
 }
+
 .cocktail img {
   height: 20rem;
   object-fit: cover;
-  border-top-left-radius: var(--mainBorderRadius);
-  border-top-right-radius: var(--mainBorderRadius);
+  border-top-left-radius: $mainBorderRadius;
+  border-top-right-radius: $mainBorderRadius;
 }
+
 .cocktail-footer {
   padding: 1.5rem;
 }
+
 .cocktail-footer h3,
 .cocktail-footer h4,
 .cocktail-footer p {
   margin-bottom: 0.3rem;
 }
+
 .cocktail-footer h3 {
   font-size: 2rem;
 }
+
 .cocktail-footer p {
-  color: var(--darkGrey);
+  color: $darkGrey;
   margin-bottom: 0.5rem;
 }
+
 /* 
 ====== 
 Form
-======
+====== 
 */
 .search {
   margin-top: 1rem;
@@ -280,14 +310,14 @@ Form
 }
 
 .search-form {
-  width: var(--smallWidth);
+  width: $smallWidth;
   margin: 0 auto;
-  max-width: var(--maxWidth);
-  background: var(--mainWhite);
+  max-width: $maxWidth;
+  background: $mainWhite;
   padding: 2rem 2.5rem;
   text-transform: capitalize;
-  border-radius: var(--mainBorderRadius);
-  box-shadow: var(--lightShadow);
+  border-radius: $mainBorderRadius;
+  box-shadow: $lightShadow;
 }
 
 .form-control label {
@@ -295,53 +325,62 @@ Form
   margin-bottom: 1.25rem;
   font-weight: bold;
   letter-spacing: 0.25rem;
-  color: var(--primaryColor);
+  color: $primaryColor;
 }
+
 .form-control input {
   width: 100%;
   border: none;
   border-color: transparent;
-  background: var(--mainBackground);
-  border-radius: var(--mainBorderRadius);
+  background: $mainBackground;
+  border-radius: $mainBorderRadius;
   padding: 0.5rem;
   font-size: 1.2rem;
   outline: 0;
 }
+
 /* 
 ====== 
 Cocktail
-======
+====== 
 */
 
 .cocktail-section {
   text-align: center;
 }
+
 .drink {
-  width: var(--smallWidth);
-  max-width: var(--fullWidth);
+  width: $smallWidth;
+  max-width: $fullWidth;
   margin: 0 auto;
   text-align: left;
 }
+
 .drink img {
-  border-radius: var(--mainBorderRadius);
+  border-radius: $mainBorderRadius;
 }
+
 .drink p {
   font-weight: bold;
   text-transform: capitalize;
   line-height: 1.8;
 }
+
 .drink span {
   margin-right: 0.5rem;
 }
+
 .drink-data {
-  background: var(--primaryLightColor);
+  background: $primaryLightColor;
   padding: 0.25rem 0.5rem;
-  border-radius: var(--mainBorderRadius);
-  color: var(--primaryColor);
+  border-radius: $mainBorderRadius;
+  color: $primaryColor;
 }
+
 .drink-info {
   padding-top: 2rem;
 }
+
 @media screen and (min-width: 992px) {
   .drink {
     display: grid;
@@ -349,10 +388,12 @@ Cocktail
     gap: 3rem;
     align-items: center;
   }
+
   .drink-info {
     padding-top: 0;
   }
 }
+
 .loader,
 .loader:before,
 .loader:after {
@@ -362,8 +403,9 @@ Cocktail
   width: 1em;
   height: 4em;
 }
+
 .loader {
-  color: var(--primaryColor);
+  color: $primaryColor;
   text-indent: -9999em;
   margin: 88px auto;
   margin-top: 20rem;
@@ -375,20 +417,24 @@ Cocktail
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
 }
+
 .loader:before,
 .loader:after {
   position: absolute;
   top: 0;
   content: "";
 }
+
 .loader:before {
   left: -1.5em;
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
+
 .loader:after {
   left: 1.5em;
 }
+
 @-webkit-keyframes load1 {
   0%,
   80%,
@@ -401,6 +447,7 @@ Cocktail
     height: 5em;
   }
 }
+
 @keyframes load1 {
   0%,
   80%,
